# Coplt.UI

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Cargo.toml  Coplt.UI.sln  Coplt.UI.sln.DotSettings  Directory.Build.props  README.md  dotnet-tools.json  global.json  vcpkg-configuration.json  vcpkg.json
Benchmark/: Benchmark.csproj  Program.cs  Test_ComputeLayout_UIDocument_1000_Node_Deep_1.cs  Test_SoftDraw_Quad_1024_1024_R8_G8_B8_A8_UNorm.cs
Coplt.SoftGraphics/: Collector.cs  Coplt.SoftGraphics.csproj  ISoftGraphicPipeline.cs  ISoftGraphicPipelineState.cs  ISoftMeshData.cs  InterpolateContext.cs  JobScheduler.cs  NSpan.cs  PooledArray.cs  Rasterizer.cs  Readme.md  SoftClearFlags.cs  SoftColorChannel.cs  SoftGraphicsContext.cs  SoftGraphicsUtils.cs  SoftPixelShader.cs  SoftPrimitiveType.cs  SoftRect.cs  SoftRefMesh.cs  SoftSamplerState.cs  SoftSimpleRefMesh.cs  SoftTexture.cs  SoftTextureFormat.cs  SoftViewport.cs  Utils.cs
Coplt.SoftGraphics/Utilities/: Collector.cs
Coplt.UI/: Attrs.cs  Coplt.UI.csproj  TODO.md  UIPanel.cs
Coplt.UI.BoxLayout/: Coplt.UI.BoxLayout.csproj  README.md  global.using.cs
Coplt.UI.BoxLayout/Compute/: Alignment.cs  BoxLayout.cs  Calc.cs  ContentSize.cs  Ex.cs  Flex.cs  Leaf.cs
Coplt.UI.BoxLayout/Layout/: CollapsibleMarginSet.cs  ILayoutFlexboxContainer.cs  ITraversePartialTree.cs  ITraverseTree.cs  Layout.cs  LayoutInput.cs  LayoutOutput.cs  RequestedAxis.cs  RunMode.cs  SizingMode.cs
Coplt.UI.BoxLayout/Styles/: AbsoluteAxis.cs  Alignment.cs  AnyLength.cs  AvailableSpace.cs  Block.cs  BoxStyle.cs  BoxStyleExtensions.cs  CalcId.cs  Common.cs  Core.cs  Corner.cs  Dimension.cs  Flex.cs  Grid.cs  Line.cs  MinMax.cs  Point.cs  Rect.cs  Size.cs
Coplt.UI.BoxLayout/Tree/: Cache.cs  ICacheTree.cs  IRoundTree.cs  LayoutPartialTree.cs
Coplt.UI.BoxLayout/Utils/: IAsReadOnlySpan.cs  Iterator.cs  PooledList.cs  PrintTree.cs  Ref.cs  RefFunc.cs
Coplt.UI.Core/: BuildNative.targets  Coplt.UI.Core.csproj  TextLayout.cs  co_com.json
Coplt.UI.Core/Collections/: DenseSet.cs  EmbedList.cs  EmbedMap.cs  EmbedQueue.cs  EmbedSet.cs  Hive.cs  HiveStorage.cs  InsertResult.cs  NOrderedSet.cs  NativeArc.cs  NativeBitSet.cs  NativeBox.cs  NativeList.cs  NativeMap.cs  NativeSlotMap.cs  OrderedSet.cs  PinChunkList.cs  RefKeyValuePair.cs  SplitMap.cs
Coplt.UI.Document/: Coplt.UI.Document.csproj
Coplt.UI.Rendering.Gpu/: BoxData.cs  Coplt.UI.Rendering.Gpu.csproj  GpuRenderLayer.cs  GpuRenderer.cs
Coplt.UI.Rendering.Gpu.D3d12/: Coplt.UI.Rendering.Gpu.D3d12.csproj  D3d12CommandRecorder.cs  D3d12CommandSignature.cs  D3d12DescId.cs  D3d12DrawCommand_Box.cs  D3d12FrameUploadPool.cs  D3d12GpuBuffer.cs  D3d12GpuContext.cs  D3d12GpuRenderTarget.cs  D3d12GpuStructuredBuffer.cs  D3d12GpuUploadBuffer.cs  D3d12GpuUploadList.cs  D3d12GraphicsPipeline.cs  D3d12HwndSwapChain.cs  D3d12Meshes.cs  D3d12RenderLayer.cs  D3d12RenderTarget.cs  D3d12RendererBackend.cs  D3d12RootSignature.cs  D3d1GraphicsPipeline.cs  DrawCommand_Box.cs  GpuRendererBackendD3d12.cs  HwndSwapChain.cs  Meshes.cs  Recyclable.cs  ViewData.cs  global.using.cs
Coplt.UI.Rending.Gpu/: Coplt.UI.Rending.Gpu.csproj  GpuRenderData.cs  GpuRenderer.cs  GpuRendererBackend.cs
Coplt.UI.Rending.Gpu.D3d12/: Coplt.UI.Rending.Gpu.D3d12.csproj  D3d12GpuContext.cs  GpuRendererBackendD3d12.cs  HwndSwapChain.cs
Coplt.UI.TextLayout/: BuildNative.targets  Coplt.UI.TextLayout.csproj  TextLayout.cs  co_com.json
Coplt.UI.Utilities/: Coplt.UI.Utilities.csproj
Coplt.UI/Widget/: View.cs  (+3 more)
Coplt.Ui.Native/: CMakeLists.txt
Coplt.Ui.Native/api/: Details.h  Interface.h  Types.h
Coplt.Ui.Native/rust_common/: Cargo.toml
Coplt.Ui.Native/rust_common/src/: gen.rs  lib.rs  merge_range.rs
Coplt.Ui.Native/rust_part/: Cargo.toml
Coplt.Ui.Native/rust_part/src/: alg.rs  atlas.rs  com.rs  dwrite.rs  font_manager.rs  icu4c.rs  layout.rs  lib.rs  utf16.rs  utils.rs
Coplt.Ui.Native/rust_part/src/col/: arc.rs  bit_set.rs  enumerator.rs  hash.rs  list.rs  map.rs  ordered_set.rs
Coplt.Ui.Native/rust_part/src/layout/: com_impl.rs  text.rs
Coplt.Ui.Native/src/: Algorithm.h  Alloc.h  Arc.h  Assert.h  Build.cc  Com.h  Compute.cc  Defines.h  Error.cc  Error.h  FFI.h  FFIUtils.h  FontFace.cc  FontManager.cc  FontManager.h  FrameSource.cc  FrameSource.h  Geometry.h  Harfpp.h  Hash.h  Layout.cc  Layout.h  LayoutCommon.cc  LayoutCommon.h  List.h  Map.h  StrideSpan.h  Text.cc  Text.h  TextLayout.cc  TextLayout.h  Utils.h  lib.cc  lib.h
Coplt.Ui.Native/src/OT/: Build.cc  Common.h  Compute.cc  Compute.h  GDEF.h  OT.h  Var.cc  Var.h  avar.h  fvar.cc  fvar.h
Coplt.Ui.Native/src/dwrite/: Backend.cc  Backend.h  BaseFontFallback.cc  BaseFontFallback.h  Build.cc  Compute.cc  CustomFontFallback.cc  CustomFontFallback.h  Error.h  Font.cc  Font.h  FontFace.cc  FontFace.h  FontFallbackBuilder.cc  FontFallbackBuilder.h  FontFamily.cc  FontFamily.h  FontManager.cc  FontManager.h  Layout.cc  Layout.h  SystemFontCollection.cc  SystemFontCollection.h  SystemFontFallback.cc  SystemFontFallback.h  TextData.cc  TextData.h  TextLayout.cc  TextLayout.h  TextLayoutCompute.cc  Utils.cc  Utils.h
Coplt.Ui.TextLayout.Native/: CMakeLists.txt
Coplt.Ui.TextLayout.Native/api/: Details.h  Interface.h  Types.h
Coplt.Ui.TextLayout.Native/src/: Backend.h  Com.h  Error.h  Face.h  FontFace.cc  FontFace.h  lib.cc  lib.h
Coplt.Ui.TextLayout.Native/src/dwrite/: Backend.cc  Backend.h  Error.h  Font.cc  Font.h  FontFace.cc  FontFace.h  FontFamily.cc  FontFamily.h  SystemFontCollection.cc  SystemFontCollection.h
Tests1/: TestDraw.cs  TestOrderedSet.cs  TestUI1.cs  TestUIElement1.cs  Tests1.csproj  UnitTest1.cs  ZOrder.cs
com/: Coplt.Ui.Native.json
coplt_ui_rusty/: Cargo.toml
coplt_ui_rusty/src/: alg.rs  atlas.rs  com.rs  dwrite.rs  font_manager.rs  icu4c.rs  layout.rs  lib.rs  unicode_utils.rs
coplt_ui_rusty/src/alg/: gen.rs  merge_range.rs
coplt_ui_rusty/src/col/: arc.rs  bit_set.rs  enumerator.rs  hash.rs  hash_helpers.rs  list.rs  map.rs  mod.rs  ordered_set.rs
coplt_ui_rusty/src/layout/: com_impl.rs  inline.rs
triplets/: x64-windows.cmake
(+199 files in other folders)
