[workspace]
exclude = ["taffy", "Coplt.Com2"]
members = ["coplt_ui_rusty"]
resolver = "3"

[workspace.dependencies]
cocom = {path = "Coplt.Com2/cocom_rs"}
concat-idents = "1"
dashmap = "6.1"
etagere = "0.2"
font-types = "0.10"
harfrust = "0.4"
icu = "2.1"
read-fonts = "0.36"
taffy = {path = "taffy"}
tuples = "1.20"
